fixed issue where video wouldn't play on mobile. switched to a more mobile friendly font

--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'Ambient';
+    font-family: 'Julius Sans One', sans-serif;
     color: white;
 }
 
@@ -36,7 +36,7 @@ nav {
 .playlistButtons {
     width: 150px;
     height: 75px;
-    font-size: 28px;
+    font-size: 22px;
     margin: 0px 15px 15px 15px;
     border-radius: 15px;
 }
